# minicode

./: README.md  pyproject.toml
src/minicode/: __main__.py  cli.py
