[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minicode"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.23.0",
    "jsonschema>=1.0.0",
    "openai>=1.26.0",
    "tavily-python>=0.5.0",
]

[project.scripts]
minicode = "minicode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
